@@ -343,6 +343,10 @@ if ( ! class_exists( 'WC_Connect_Loader' ) ) {
 			$this->rest_subscriptions_controller = $rest_subscriptions_controller;
 		}
 
+		public function set_rest_subscription_activate_controller( WC_REST_Connect_Subscription_Activate_Controller $rest_subscription_activate_controller ) {
+			$this->rest_subscription_activate_controller = $rest_subscription_activate_controller;
+		}
+
 		public function set_rest_carrier_controller( WC_REST_Connect_Shipping_Carrier_Controller $rest_carrier_controller ) {
 			$this->rest_carrier_controller = $rest_carrier_controller;
 		}
@@ -886,6 +890,11 @@ if ( ! class_exists( 'WC_Connect_Loader' ) ) {
 			$rest_subscriptions_controller = new WC_REST_Connect_Subscriptions_Controller( $this->api_client, $settings_store, $logger );
 			$this->set_rest_subscriptions_controller( $rest_subscriptions_controller );
 			$rest_subscriptions_controller->register_routes();
+
+			require_once( plugin_basename( 'classes/class-wc-rest-connect-subscription-activate-controller.php' ) );
+			$rest_subscription_activate_controller = new WC_REST_Connect_Subscription_activate_Controller( $this->api_client, $settings_store, $logger );
+			$this->set_rest_subscription_activate_controller( $rest_subscription_activate_controller );
+			$rest_subscription_activate_controller->register_routes();
 
 			require_once( plugin_basename( 'classes/class-wc-rest-connect-shipping-carrier-delete-controller.php' ) );
 			$rest_carrier_delete_controller = new WC_REST_Connect_Shipping_Carrier_Delete_Controller( $this->api_client, $settings_store, $logger );
